# traffic-simulator

./: .gitignore  Makefile  pyproject.toml
examples/: test1.py  test2.py  test3.py
tests/: simpletest.py
trafficsim/: __init__.py
trafficsim/core/: simulation.py  vehicle.py  vehicle_generator.py
trafficsim/core/geometry/: cubic_curve.py  quadratic_curve.py  segment.py  straight_curve.py
trafficsim/visualizer/: window.py
