[tool.poetry]
name = "trafficsim"
version = "0.0.1"
description = "A microscopic traffic simulation in Python"
readme = "README.md"
license = "MIT"
keywords = ["traffic", "setuptools", "development"]

authors = [
  "Bilal Himite <mail.bilalhimite@gmail.com>",
  "Spencer Hallyburton <spencer.hallyburton@duke.edu>"
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">1.20"
scipy = "^1.9"
dearpygui = "^1.9"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-cov = "^4"
bandit = "^1.7"
black = "~22.12.0"
mypy = "^0"
isort = "^5.11"
flake8 = "^5.0"
autoflake = "^1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]


[project.urls]
"Homepage" = "https://github.com/BilHim/trafficSimulator"
"Bug Reports" = "https://github.com/BilHim/trafficSimulator/issues"
"Funding" = "https://ko-fi.com/bilhim"
"Say Thanks!" = "https://saythanks.io/to/BilHim"
"Source" = "https://github.com/BilHim/trafficSimulator/"


[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"